package Cuaderno_4.Ejercicio6_6;

public abstract  class Animal {
    String name;
    public Animal ( String name){
        this.name=name;
    }
    public void greets(){
    }

}
