@startuml
'https://plantuml.com/class-diagram

abstract class Animal{
+abstract greeting():void
}
Cat--|>Animal
class Cat {
+greeting():void
}
Dog--|>Animal
class Dog {
+greeting():void
+greeting(Dog: Another):void
}

BigDog--|>Dog
class BigDog {
+greeting():void
+greeting(Dog: Another):void
}





@enduml